[gd_scene load_steps=4 format=2]

[ext_resource path="res://obstacles/guns/laser gun/LaserGun.gd" type="Script" id=1]
[ext_resource path="res://obstacles/guns/laser gun/sprites/tile704.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16.5414, 25.1864 )

[node name="LaserGun" type="Node2D"]
script = ExtResource( 1 )
time_shooting = 1.0
time_cooldown = 1.5
laser_size = 20

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 28, -6 )
rotation = 4.71239
enabled = true
cast_to = Vector2( 0, 1500 )
collide_with_areas = true

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="Line2D" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 0, 0 )
width = 6.0
default_color = Color( 1, 0, 0, 1 )
end_cap_mode = 2

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 0, 7.55952 )
shape = SubResource( 1 )

[node name="BeamStart" type="Position2D" parent="."]
position = Vector2( 28, -6 )

[node name="TimerCooldown" type="Timer" parent="."]
one_shot = true

[node name="TimerShooting" type="Timer" parent="."]
one_shot = true

[node name="TimerFirstShoot" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true
[connection signal="timeout" from="TimerCooldown" to="." method="_on_TimerCooldown_timeout"]
[connection signal="timeout" from="TimerShooting" to="." method="_on_TimerShooting_timeout"]
[connection signal="timeout" from="TimerFirstShoot" to="." method="_on_TimerFirstShoot_timeout"]
